@@ -37,7 +37,8 @@ Build system
 Fixed bugs
 ----------
 
-- handle floating point numbers precisely in parsers and writers
+- Input and Output: handle floating point numbers precisely in parsers and writers
+- SimpleSubstitution: correct feasibility tolerances on euclidean coprime substitutions
 
 Miscellaneous
 -------------
